--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,8 +1,8 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link">Liste des commandes</a>
+    <a class="nav-link" routerLink=''>Liste des commandes</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link">Ajouter une commande</a>
+    <a class="nav-link" routerLink='add' routerLinkActive='active'>Ajouter une commande</a>
   </li>
 </ul>
