--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,8 +1,26 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link" routerLink=''>Liste des commandes</a>
+    <a class="nav-link" routerLink='/orders' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Liste des commandes</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink='add' routerLinkActive='active'>Ajouter une commande</a>
+    <a class="nav-link" routerLink='/orders/add' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Ajouter une commande</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/orders/edit' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Editer une commande</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/clients' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Liste des clients</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/clients/add' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Ajouter une commande</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/clients/edit' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+true}">Editer une commande</a>
   </li>
 </ul>
