demo observable + service + appel http

--- a/src/app/clients/pages/page-list-clients/page-list-clients.component.html
+++ b/src/app/clients/pages/page-list-clients/page-list-clients.component.html
@@ -1,1 +1,22 @@
 <p>page-list-clients works!</p>
+<!--
+
+  tableau de clients à placer dans db.json
+  url vers /clients
+
+  Typer Client ( dans CoreModule)
+  enum / interface / model
+  ng g enum <nom>
+  ng g interface <nom-i>
+  ng g class <nom>
+
+  service Clients
+  ng g service <nom>
+  ajouter une méthode avec appel http
+
+  Depuis le composant PageListClients,
+  appel vers la méthode dans le service
+  afficher le tableau
+
+
+ -->
