--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -23,4 +23,9 @@ true}">Ajouter une commande</a>
     <a class="nav-link" routerLink='/clients/edit' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
 true}">Editer une commande</a>
   </li>
+
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/orders/obs' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+  true}">Demo Observable</a>
+  </li>
 </ul>
