communication parent enfant avec @Input()

--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -39,3 +39,14 @@
 
   </tbody>
 </table>
+<!-- un composant réutilisable et personnalisable -->
+<!-- quelles infos ? label; style; lien -->
+<!-- vérifier dans app-btn que vous avez reçu le label -->
+<!-- Attention les [] sont à utiliser avec une variable = property binding -->
+<app-btn
+  title='Ajouter'
+  routeInfo='/orders/add'
+  styleBtn='btn btn-warning'>
+</app-btn>
+
+<!-- btn btn-primary -->
