ajout du form avec reactiveFormsModule (part 1)

--- a/src/app/clients/pages/page-list-clients/page-list-clients.component.html
+++ b/src/app/clients/pages/page-list-clients/page-list-clients.component.html
@@ -20,3 +20,16 @@
 
 
  -->
+
+
+ <!--
+
+  ajouter un pipe pour calcul TTC
+  ajouter le currency
+  modifier le style de la cellule state en fonction du state (directive)
+  ajouter un bouton et lui passer des infos
+  dans la page add > ajouter un form
+  operateur ternaire  condition ? (option1 ): option2
+  null = false
+
+  -->
