--- a/src/app/orders/pages/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/pages/page-edit-order/page-edit-order.component.html
@@ -1,1 +1,4 @@
-<p>page-edit-order works!</p>
+<!--  -->
+
+<!-- récupérer un order existant par l'url et le faire passer à app-form-order -->
+<app-form-order></app-form-order>
