--- a/src/app/orders/components/form-order/form-order.component.html
+++ b/src/app/orders/components/form-order/form-order.component.html
@@ -2,22 +2,22 @@
 <!-- ajouter form avec les inputs -->
 <!-- alimenter les inputs avec un nouvel objet de type Order -->
 <div class="container">
-  <form [formGroup]='form'>
+  <form [formGroup]='form' (ngSubmit)='onSubmit()'>
 
   <div class="form-group">
     <label for="typePresta">type</label>
-    <input type="text" class="form-control" id="typePresta">
+    <input type="text" class="form-control" id="typePresta" formControlName='typePresta'>
   </div>
 
 
   <div class="form-group">
     <label for="client">client</label>
-    <input type="text" class="form-control" id="client">
+    <input type="text" class="form-control" id="client" formControlName='client'>
   </div>
 
   <div class="form-group">
     <label for="nbJours">nbJours</label>
-    <input type="number" class="form-control" id="nbJours">
+    <input type="number" class="form-control" id="nbJours" formControlName='nbJours'>
   </div>
 
   <div class="form-group">
@@ -27,25 +27,32 @@
 
   <div class="form-group">
     <label for="tva">tva</label>
-    <input type="number" class="form-control" id="tva">
+    <input type="number" class="form-control" id="tva" formControlName='tva'>
   </div>
 
   <div class="form-group">
     <label for="state">state</label>
-    <select class="form-control" id="state">
+    <select class="form-control" id="state" formControlName='state'>
+
+      <option>Option1</option>
+      <option>Option2</option>
+      <option>Option3</option>
 
 
     </select>
   </div>
 
-
   <div class="form-group">
     <label for="comment">comment</label>
-    <textarea class="form-control" id="comment"></textarea>
+    <textarea class="form-control" id="comment" formControlName='comment'></textarea>
   </div>
 
-
+  <button class='btn btn-primary' type='submit'>Valider</button>
 
 </form>
 </div>
 
+
+<!-- ajouter et gérer le submit -->
+<!-- faire un appel http en méthode post avec obj -->
+<!-- ajouter des validations -->
