--- a/src/app/clients/pages/page-list-clients/page-list-clients.component.html
+++ b/src/app/clients/pages/page-list-clients/page-list-clients.component.html
@@ -33,3 +33,14 @@
   null = false
 
   -->
+
+  <!--
+    Select sur le form StateClient
+    Partie POST
+    Créer new Client dans Page Add Client
+    Au submit, client-form envoie les infos à Page Add Client
+    Validations
+    Message d'erreur
+
+    Select sur PageListClients
+   -->
