--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -34,19 +34,29 @@
         'state-option': obj.state == 'OPTION',
         'state-confirmed': obj.state == 'CONFIRMED'
       }"> {{ obj.state}}</td> -->
-      <td appState [stateObj]='obj.state'>{{obj.state}}</td>
+      <td appState [stateObj]='obj.state'>
+        <select class="form-control" id="state" (change)='changeState(obj, $event)'>
+          <option [selected]='state === obj.state' *ngFor='let state of states' [value]='state'> {{state}} </option>
+        </select>
+      </td>
     </tr>
 
   </tbody>
 </table>
-<!-- un composant réutilisable et personnalisable -->
-<!-- quelles infos ? label; style; lien -->
-<!-- vérifier dans app-btn que vous avez reçu le label -->
-<!-- Attention les [] sont à utiliser avec une variable = property binding -->
 <app-btn
   title='Ajouter'
   routeInfo='/orders/add'
   styleBtn='btn btn-warning'>
 </app-btn>
 
-<!-- btn btn-primary -->
+
+
+<!-- objectif: changer le state -->
+<!--
+  ajouter un select + options
+  event au change au niveau du select
+  dans service => nouvelle fonction PUT
+ -->
+
+
+
