ajout btn goToEdit()

--- a/src/app/orders/pages/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/pages/page-edit-order/page-edit-order.component.html
@@ -1,4 +1,4 @@
 <!--  -->
-
+<h1>Editer une commande</h1>
 <!-- récupérer un order existant par l'url et le faire passer à app-form-order -->
-<app-form-order></app-form-order>
+<!-- <app-form-order []=''></app-form-order> -->
