--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -17,15 +17,23 @@ true}">Liste des clients</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink='/clients/add' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
-true}">Ajouter une commande</a>
+true}">Ajouter un client</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink='/clients/edit' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
-true}">Editer une commande</a>
+true}">Editer un client</a>
   </li>
 
   <li class="nav-item">
     <a class="nav-link" routerLink='/orders/obs' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
   true}">Demo Observable</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/orders/obs-subject' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+    true}">Demo Observable Subject</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/orders/obs-behavior-subject' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+      true}">Demo Observable Behavior Subject</a>
   </li>
 </ul>
