--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -11,7 +11,7 @@ true}">Ajouter une commande</a>
     <a class="nav-link" routerLink='/orders/edit' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
 true}">Editer une commande</a>
   </li>
-  <li class="nav-item">
+  <!-- <li class="nav-item">
     <a class="nav-link" routerLink='/clients' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
 true}">Liste des clients</a>
   </li>
@@ -35,5 +35,11 @@ true}">Editer un client</a>
   <li class="nav-item">
     <a class="nav-link" routerLink='/orders/obs-behavior-subject' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
       true}">Demo Observable Behavior Subject</a>
-  </li>
+  </li> -->
 </ul>
+
+
+<!-- <button (click)='onAdd()'>INCREMENTER</button>
+
+
+{{ counter}} -->
