--- a/src/app/orders/pages/page-add-order/page-add-order.component.html
+++ b/src/app/orders/pages/page-add-order/page-add-order.component.html
@@ -1,6 +1,12 @@
 
 <!-- créer un composant form-order, où ???? -->
+<!-- <p>
+  <a href='http://localhost:49548/orders'>Test avec href</a>
+</p>
 
+<p>
+  <a routerLink=''> Test avec routerLink</a>
+</p> -->
 
 
 <!-- générer un new order et le faire passer à app-form-order -->
@@ -9,3 +15,4 @@
 [objOrder]='init'
 (submitted)='onAdd($event)'
 ></app-form-order>
+
