--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,4 +1,3 @@
-
 <!-- string interpolation -->
 <h1>{{ title }}</h1>
 
@@ -34,6 +33,7 @@
         'state-option': obj.state == 'OPTION',
         'state-confirmed': obj.state == 'CONFIRMED'
       }"> {{ obj.state}}</td> -->
+      <!-- works -->
       <td appState [stateObj]='obj.state'>
         <select class="form-control" id="state" (change)='changeState(obj, $event)'>
           <option [selected]='state === obj.state' *ngFor='let state of states' [value]='state'> {{state}} </option>
@@ -43,10 +43,7 @@
 
   </tbody>
 </table>
-<app-btn
-  title='Ajouter'
-  routeInfo='/orders/add'
-  styleBtn='btn btn-warning'>
+<app-btn title='Ajouter' routeInfo='/orders/add' styleBtn='btn btn-warning'>
 </app-btn>
 
 
@@ -57,6 +54,3 @@
   event au change au niveau du select
   dans service => nouvelle fonction PUT
  -->
-
-
-
