--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,27 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+/* styles.css (ou tout fichier CSS global) */
+/* Style spécifique pour le bouton OK */
+/* Style pour les boutons OK et Annuler */
+.modal-buttons button {
+  margin: 0 10px;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.modal-buttons button:first-child {
+  background-color: #5cb85c;
+  /* Couleur de fond pour le bouton OK */
+  color: #fff;
+  /* Couleur du texte */
+}
+
+/* Style spécifique pour le bouton Annuler */
+.modal-buttons button:last-child {
+  background-color: #d9534f;
+  /* Couleur de fond pour le bouton Annuler */
+  color: #fff;
+  /* Couleur du texte */
+}
