add demo asObservable

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -36,6 +36,10 @@ true}">Editer un client</a>
     <a class="nav-link" routerLink='/orders/obs-behavior-subject' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
       true}">Demo Observable Behavior Subject</a>
   </li> -->
+  <li class="nav-item">
+    <a class="nav-link" routerLink='/orders/obs-as-obs' routerLinkActive='active' [routerLinkActiveOptions]="{exact:
+          true}">Demo Observable ReadOnly</a>
+  </li>
 </ul>
 
 
